tests/negative/typecheck/no_default.orng
fn main() -> Int {
    const X: Type
    4
}